# nimbus

./: Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: build.yml
src/: main.rs
src/sites/: gofile.md  gofile.rs  mod.rs
src/uploader/: file_uploader.rs  gofile_uploader.rs  mod.rs
src/utils/: file_utils.rs  json_utils.rs  logger_utils.rs  mod.rs
