[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde_json = "1.0"
futures = "0.3"
indicatif = "0.17"
bytes = "1.7"